musl/issues/MsCoreUtils.out
* installing to library '/home/runner/R-patched/lib'
* installing *source* package 'MsCoreUtils' ...
** this is package 'MsCoreUtils' version '1.22.1'
** package 'MsCoreUtils' successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C compiler: 'gcc (Alpine 14.2.0) 14.2.0'
make[1]: Entering directory '/var/local/PKGS/BIOC/MsCoreUtils/src'
gcc -std=gnu23 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native  -c between.c -o between.o
gcc -std=gnu23 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native  -c closest.c -o closest.o
gcc -std=gnu23 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native  -c impNeighbourAvg.c -o impNeighbourAvg.o
gcc -std=gnu23 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native  -c init.c -o init.o
gcc -std=gnu23 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I/usr/local/include    -fpic  -O2 -mtune=native  -c join.c -o join.o
join.c: In function 'C_join_inner':
join.c:114:5: error: implicit declaration of function 'SETLENGTH'; did you mean 'XLENGTH'? [-Wimplicit-function-declaration]
  114 |     SETLENGTH(rx, j);
      |     ^~~~~~~~~
      |     XLENGTH
make[1]: *** [/home/runner/R-patched/build/etc/Makeconf:190: join.o] Error 1
make[1]: Leaving directory '/var/local/PKGS/BIOC/MsCoreUtils/src'
make[1]: Entering directory '/var/local/PKGS/BIOC/MsCoreUtils/src'
make[1]: Leaving directory '/var/local/PKGS/BIOC/MsCoreUtils/src'
ERROR: compilation failed for package 'MsCoreUtils'
* removing '/home/runner/R-patched/lib/MsCoreUtils'
* restoring previous '/home/runner/R-patched/lib/MsCoreUtils'
